@@ -19,13 +19,13 @@
 
 package org.apache.datasketches.memory;
 
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.Arena;
 
 /**
  * The MemoryRequestServer is a callback interface to provide a means to request more memory
  * for heap and off-heap WritableMemory resources that are not file-memory-mapped backed resources.
  *
- * <p>Note: this only works with Java 17.
+ * <p>Note: this only works with Java 21.
  *
  * @author Lee Rhodes
  */
@@ -33,7 +33,7 @@ public interface MemoryRequestServer {
 
   /**
    * Request new WritableMemory with the given newCapacityBytes. The current WritableMemory can be used to
-   * determine the byte order of the returned WritableMemory and other properties. A new confined ResourceScope is
+   * determine the byte order of the returned WritableMemory and other properties. A new confined Arena is
    * assigned.
    * @param currentWritableMemory the current writableMemory of the client. It must be non-null.
    * @param newCapacityBytes The capacity being requested. It must be &gt; the capacity of the currentWritableMemory.
@@ -42,7 +42,8 @@ public interface MemoryRequestServer {
   default WritableMemory request(
       WritableMemory currentWritableMemory,
       long newCapacityBytes) {
-    return request(currentWritableMemory, newCapacityBytes, ResourceScope.newConfinedScope());
+
+    return request(currentWritableMemory, newCapacityBytes, Arena.ofConfined());
   }
 
   /**
@@ -50,16 +51,14 @@ public interface MemoryRequestServer {
    * determine the byte order of the returned WritableMemory and other properties.
    * @param currentWritableMemory the current writableMemory of the client. It must be non-null.
    * @param newCapacityBytes The capacity being requested. It must be &gt; the capacity of the currentWritableMemory.
-   * @param scope the ResourceScope to be used for the newly allocated memory.
-   * It must be non-null.
-   * Typically use <i>ResourceScope.newConfinedScope()</i>.
-   * Warning: specifying a <i>newSharedScope()</i> is not supported.
+   * @param arena the Arena to be used for the newly allocated memory. It must be non-null.
+   * Warning: This class is not thread-safe. Specifying an Arena that allows multiple threads is not recommended.
    * @return new WritableMemory with the requested capacity.
    */
   WritableMemory request(
       WritableMemory currentWritableMemory,
       long newCapacityBytes,
-      ResourceScope scope);
+      Arena arena);
 
   /**
    * Request to close the resource, if applicable.
